Refactored module parser to use module class/object

--- a/modules.yml
+++ b/modules.yml
@@ -3,3 +3,7 @@ modules:
     src-dir: ./main-module/src
     include-dir: ./main-module/include
     libraries: ["yaml-cpp"]
+  tests-module: #this isn't a real module -- it is just here to make sure that the system is able to handle more than one
+    src-dir: ./tests-module/src
+    include-dir: ./tests-module/include
+    libraries: ["module:main-module", "yaml-cpp"]
