Added basic makefile generation

--- a/modules.yml
+++ b/modules.yml
@@ -2,8 +2,4 @@ modules:
   main-module:
     src-dir: ./main-module/src
     include-dir: ./main-module/include
-    libraries: ["yaml-cpp", "boost_filesystem"]
-#  tests-module: #this isn't a real module -- it is just here to make sure that the system is able to handle more than one module
-#    src-dir: ./tests-module/src
-#    include-dir: ./tests-module/include
-#    libraries: ["module:main-module", "yaml-cpp"]
+    libraries: ["/usr/local/lib/libyaml-cpp.a", "/usr/local/lib/libboost_filesystem.a", "/usr/local/lib/libboost_system.a"]
